--- a/modulos_externos/l10n_ve_account_reports_v1/views/report_purchase_order.xml
+++ b/modulos_externos/l10n_ve_account_reports_v1/views/report_purchase_order.xml
@@ -32,7 +32,7 @@
                                         <li t-if="o.company_id.street"><span t-field="o.company_id.street"/></li>
                                         <li t-if="o.company_id.street2"><span t-field="o.company_id.street2"/></li>
                                         <li t-if="o.company_id.phone">Tel: <span t-field="o.company_id.phone"/></li>
-                                        <li t-if="o.company_id.vat"><t t-esc="o.company_id.partner_id.vat"/></li>
+                                        <li t-if="o.company_id.vat"><t t-esc="o.company_id.country_id.vat"/></li>
                                     </ul>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                                 </thead>
                                 <tbody class="text-center" style="font-size:15px !important;">
                                     <t t-foreach="o.order_line" t-as="line">
-                                        <tr style="line-height: 8em;">
+                                        <tr style="line-height: 10em;">
                                             <td style="border-left: 1px solid black; border-right: 1px solid black;">
                                                 <span t-esc="line.product_id.name"/>
                                             </td>
@@ -170,137 +170,71 @@
                                         </tr>
                                     </t>
                                 </tbody>
+                            </table>
+                             <table class="table table-borderless table-sm" style="border:1px solid black; border-collapse:collapse !important;border-top:white;">
+                                <tr style="font-size: 12px !important;">
+                                    <td style="width: 12% !important;"><strong>SUB-TOTAL (EXP):</strong></td>
+                                    <td>0.0</td>
+                                    <td>IVA 0.00%</td>
+                                    <td style="width: 28.90% !important;">0.0%</td>
+                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL EXENTO</strong></td>
+                                    <td style="width: 23.50% !important; border-bottom: 1px solid black;" t-esc="cant_exento" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </tr>
+                                <tr style="font-size: 12px !important;">
+                                    <td><strong>SUB-TOTAL (RED):</strong></td>
+                                    <td t-esc="cant_reduced" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                    <td>IVA 8.0%</td>
+                                    <td t-esc="'{0:,.2f}'.format(iva_reduced) + '%'"/>
+                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL BASE IMPONIBLE</strong></td>
+                                    <td style="border-bottom: 1px solid black;" t-esc="cant_reduced + cant_general + cant_adicional" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
 
-                                <tfoot style="  border: black 1px solid;">
-                                    <tr style="font-size: 12px !important;">
-                                        <td><strong>SUB-TOTAL (EXP):</strong></td>
-                                        <td>0.0</td>
-                                        <td>IVA 0.00%</td>
-                                        <td>0.0%</td>
-                                        <td style="border-left: black 1px solid;border-bottom: black 1px solid;border-right: black 1px solid;"><strong>TOTAL EXENTO</strong></td>
-                                        <td style="width: 12.80% !important; border-bottom: 1px solid black;" t-esc="cant_exento"  t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                    </tr>
-                                    <tr style="font-size: 12px !important;">
-                                        <td><strong>SUB-TOTAL (RED):</strong></td>
-                                        <td t-esc="cant_reduced" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                        <td>IVA 8.0%</td>
-                                        <td t-esc="'{0:,.2f}'.format(iva_reduced) + '%'"/>
-                                        <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"> <strong>TOTAL BASE IMPONIBLE</strong> </td>
-                                        <td style="border-bottom: 1px solid black;" t-esc="cant_reduced + cant_general + cant_adicional" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </tr>
+                                <tr style="font-size: 12px !important;">
+                                    <td><strong>SUB-TOTAL (GEN):</strong></td>
+                                    <td t-esc="cant_general" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                    <td>IVA 16%</td>
+                                    <td t-esc="'{0:,.2f}'.format(iva_general) + '%'"/>
+                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL DESCUENTO</strong></td>
+                                    <td style="border-bottom: 1px solid black;" t-esc="discount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </tr>
+                                <tr style="font-size: 12px !important;">
+                                    <td><strong>SUB-TOTAL (C.S):</strong></td>
+                                    <td t-esc="cant_adicional" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                    <td>IVA 31%</td>
+                                    <td t-esc="'{0:,.2f}'.format(iva_adicional) + '%'"/>
+                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL I.V.A</strong></td>
+                                    <td style="border-bottom: 1px solid black;" t-esc="'{0:,.2f}'.format(iva_reduced + iva_general + iva_adicional)"/>
 
-                                    </tr>
-                                    <tr style="font-size: 12px !important;">
-                                        <td>
-                                            <strong>SUB-TOTAL (GEN):</strong>
-                                        </td>
-                                        <td t-esc="cant_general"
-                                            t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                        <td>IVA 16%</td>
-                                        <td t-esc="'{0:,.2f}'.format(iva_general) + '%'"/>
-                                        <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">
-                                            <strong>TOTAL DESCUENTO</strong>
-                                        </td>
-                                        <td style="border-bottom: 1px solid black;" t-esc="discount"
-                                            t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                    </tr>
-                                    <tr style="font-size: 12px !important;">
-                                        <td>
-                                            <strong>SUB-TOTAL (C.S):</strong>
-                                        </td>
-                                        <td t-esc="cant_adicional"
-                                            t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                        <td>IVA 31%</td>
-                                        <td t-esc="'{0:,.2f}'.format(iva_adicional) + '%'"/>
-                                        <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">
-                                            <strong>TOTAL I.V.A</strong>
-                                        </td>
-                                        <td style="border-bottom: 1px solid black;"
-                                            t-esc="'{0:,.2f}'.format(iva_reduced + iva_general + iva_adicional)"/>
-                                    </tr>
-                                    <tr style="font-size: 12px !important;">
+                                </tr>
+                                <tr style="font-size: 12px !important;">
                                     <td colspan="4"></td>
                                     <td style="border-left: 1px solid black; border-right: 1px solid black;"><strong>TOTAL ORDEN DE COMPRA</strong></td>
                                     <td t-esc="o.amount_total"/>
                                 </tr>
+                            </table>
+                             <table class="table table-borderless table-sm" style="border:1px solid black; border-collapse:collapse !important; margin-top:-13px;">
                                 <tr style="font-size: 12px !important;">
-                                    <td colspan="4" style="border-top: 1px solid black;">CTA. BANCARIA:</td>
-                                    <td style="width: 30.10%;border-left: 1px solid black;border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL RET. ISLR:</strong></td>
-                                    <td style="width: 15.85% !important; border-left: 1px solid black;border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">0.0 %</td>
+                                    <td style="width: 57.40% !important;">CTA. BANCARIA:</td>
+                                    <td></td>
+                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL RET. ISLR:</strong></td>
+                                    <td style="width: 23.50% !important; border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">0.0 %</td>
                                 </tr>
                                 <tr style="font-size: 12px !important;">
-                                    <td  colspan="4" style="border-top: 1px solid black;">CORREO:</td>
+                                    <td>CORREO:</td>
+                                    <td></td>
                                     <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL RET. IVA:</strong></td>
                                     <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">0.0 %</td>
                                 </tr>
-                                </tfoot>
                             </table>
-
-<!--                             <table class="table table-borderless table-sm" style="border:1px solid black; border-collapse:collapse !important;border-top:white;table-layout:fixed;width:100%">-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td  colspan="1" style="width: -200px;white-space:nowrap;"><strong>SUB-TOTAL (EXP):</strong></td>-->
-<!--                                    <td  colspan="1">0.0</td>-->
-<!--                                    <td  colspan="1">IVA 0.00%</td>-->
-<!--                                    <td  style="width:150px;">0.0%</td>-->
-<!--                                    <td colspan="1" style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;width:34.30%;"><strong>TOTAL EXENTO</strong></td>-->
-<!--                                    <td style="width: 12.80% !important; border-bottom: 1px solid black;" t-esc="cant_exento" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>-->
-<!--                                </tr>-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td><strong>SUB-TOTAL (RED):</strong></td>-->
-<!--                                    <td t-esc="cant_reduced" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>-->
-<!--                                    <td>IVA 8.0%</td>-->
-<!--                                    <td t-esc="'{0:,.2f}'.format(iva_reduced) + '%'"/>-->
-<!--                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL BASE IMPONIBLE</strong></td>-->
-<!--                                    <td style="border-bottom: 1px solid black;" t-esc="cant_reduced + cant_general + cant_adicional" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>-->
-
-<!--                                </tr>-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td><strong>SUB-TOTAL (GEN):</strong></td>-->
-<!--                                    <td t-esc="cant_general" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>-->
-<!--                                    <td>IVA 16%</td>-->
-<!--                                    <td t-esc="'{0:,.2f}'.format(iva_general) + '%'"/>-->
-<!--                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL DESCUENTO</strong></td>-->
-<!--                                    <td style="border-bottom: 1px solid black;" t-esc="discount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>-->
-<!--                                </tr>-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td><strong>SUB-TOTAL (C.S):</strong></td>-->
-<!--                                    <td t-esc="cant_adicional" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>-->
-<!--                                    <td>IVA 31%</td>-->
-<!--                                    <td t-esc="'{0:,.2f}'.format(iva_adicional) + '%'"/>-->
-<!--                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL I.V.A</strong></td>-->
-<!--                                    <td style="border-bottom: 1px solid black;" t-esc="'{0:,.2f}'.format(iva_reduced + iva_general + iva_adicional)"/>-->
-
-<!--                                </tr>-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td colspan="4"></td>-->
-<!--                                    <td style="border-left: 1px solid black; border-right: 1px solid black;"><strong>TOTAL ORDEN DE COMPRA</strong></td>-->
-<!--                                    <td t-esc="o.amount_total"/>-->
-<!--                                </tr>-->
-<!--                            </table>-->
-
-
-<!--                             <table class="table table-borderless table-sm" style="border:1px solid black;border-top:0px solid black; border-collapse:collapse !important; margin-top:-13px;margin-top:0px;">-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td style="width: 52% !important;">CTA. BANCARIA:</td>-->
-<!--                                    <td></td>-->
-<!--                                    <td style="width: 30.10%;border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL RET. ISLR:</strong></td>-->
-<!--                                    <td style="width: 15.85% !important; border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">0.0 %</td>-->
-<!--                                </tr>-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td>CORREO:</td>-->
-<!--                                    <td></td>-->
-<!--                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"><strong>TOTAL RET. IVA:</strong></td>-->
-<!--                                    <td style="border-left: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;">0.0 %</td>-->
-<!--                                </tr>-->
-<!--                            </table>-->
-<!--                            <table class="table table-borderless table-sm" style="border:1px solid black; border-collapse:collapse !important; margin-top:-13px;">-->
-<!--                                <tr style="font-size: 12px !important;">-->
-<!--                                    <td><strong>SON:</strong></td>-->
-<!--                                    <td>-->
-<!--                                        <span t-esc="o.get_literal_amount(o.amount_total)"/>-->
-<!--                                        <t t-if="o.currency_id.long_name"><span t-esc="o.currency_id.long_name"/></t>-->
-<!--                                    </td>-->
-<!--                                </tr>-->
-<!--                            </table>-->
+                            <table class="table table-borderless table-sm" style="border:1px solid black; border-collapse:collapse !important; margin-top:-13px;">
+                                <tr style="font-size: 12px !important;">
+                                    <td><strong>SON:</strong></td>
+                                    <td>
+                                        <span t-esc="o.get_literal_amount(o.amount_total)"/>
+                                        <t t-if="o.currency_id.long_name"><span t-esc="o.currency_id.long_name"/></t>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </t>
                 </t>
