--- a/modulos_externos/l10n_ve_account_reports/views/report_account_invoice.xml
+++ b/modulos_externos/l10n_ve_account_reports/views/report_account_invoice.xml
@@ -104,7 +104,7 @@
                                         </td>
                                         <td style="border-top:0px !important; padding:0px !important;"/>
                                         <td style="border-top:0px !important; padding:0px !important;">
-                                            <strong>N. DOC.CLINETE:</strong>
+                                            <strong>N. DOC.CLIENTE:</strong>
                                         </td>
                                         <td style="border-top:0px !important; padding:0px !important;"/>
                                     </tr>
