--- a/rrhh_14/ext_hr_vikua/views/hr_inherit_payslip_view.xml
+++ b/rrhh_14/ext_hr_vikua/views/hr_inherit_payslip_view.xml
@@ -9,11 +9,19 @@
             <field name="arch" type="xml">
                 
                 <!--xpath expr="//field[@name='name']" position="before"-->
-                <xpath expr="//form[1]/sheet[1]/group[2]/group[1]/label[1]" position="before">
-                    <field name="comision_check" style="width: 15%%"/>
-                    <field name="comision_value" string="Monto" attrs="{'invisible': [('comision_check', '!=', True)]}" nolabel="1"/>
+                <xpath expr="//form[1]/sheet[1]/group[2]/group[1]" position="before">
+
+                    <label for="comision_check"/>
+                                <div>
+                                    <div class="address_format">
+                                        <field name="comision_check" style="width: 15%%"/>
+                                        <field name="comision_value" string="Monto" attrs="{'invisible': [('comision_check', '!=', True)]}" nolabel="1"/>
+                                            <!--span>/ month</span-->
+                                    </div>
+                                </div>
+
                 </xpath>
-                
+
                 
 
                
