--- a/rrhh_14/hr_campos_parametrizacion/views/x_hr_inherit_payroll_structure.xml
+++ b/rrhh_14/hr_campos_parametrizacion/views/x_hr_inherit_payroll_structure.xml
@@ -12,6 +12,7 @@
                 </xpath>
                 <xpath expr="//field[@name='schedule_pay']" position="after">
                     <field name="shedule_pay_value" string="Cada cuanto dias se paga"/>
+                    <field name="company_id" string="Compañia"/>
                 </xpath>
 
                 <xpath expr="//page[@name='salary_rules']" position="after">
@@ -20,10 +21,22 @@
                         <field name="employee_ids" nolabel="1" readonly="False">
                             <tree string="Empleados" editable="buttom">
                             <field name="empleado_id" string="Empleado" domain="[('active','=',True),('contract_id.state','=','open')]"/>
+                            <field name="company_id" string="Compañia"/>
                         </tree>
                         </field>
                       </group>
                     </page>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="hr_payroll_structure_list_inherit" model="ir.ui.view">
+            <field name="name">hr_payroll_structure_list</field>
+            <field name="model">hr.payroll.structure</field>
+            <field name="inherit_id" ref="hr_payroll.view_hr_payroll_structure_list_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='country_id']" position="after">
+                    <field name="company_id" string="Compañia"/>
                 </xpath>
             </field>
         </record>
