--- a/rrhh_14/hr_campos_parametrizacion/views/hr_salary_rule_inherit.xml
+++ b/rrhh_14/hr_campos_parametrizacion/views/hr_salary_rule_inherit.xml
@@ -12,7 +12,25 @@
                     <field name="company_id" string="Compañia"/>
                 </xpath>
 
-                <!--xpath expr="//field[@name='name']" position="before"-->
+                <xpath expr="//field[@name='appears_on_payslip']" position="after">
+                    <field name="devengado" string="Será un devengado?"/>
+                </xpath>
+
+                <xpath expr="//group[@name='main_details']" position="after">
+                    <div name="central_devengado" attrs="{'invisible': [('devengado', '!=', True)]}">
+                        <h3><a><b>Este Concepto aplica o se emplea en el Cálculo de:</b></a></h3>
+                        <newline/>
+                        <group name="devengados_details" col="4">
+                            <field name="salario_normal"/>
+                            <field name="utilidades"/>
+                            <field name="vacaciones"/>
+                            <field name="prestaciones"/>
+                            <field name="islr"/>
+                            <field name="inces"/>
+                            <field name="rpvh" string="Ley de politica Habitacional"/>
+                        </group>
+                    </div>
+                </xpath>
                 
             </field>
         </record>
